--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <span></span>
           <span></span>
       </button>
-      <ul class="menu">
+      <ul class="menu" style="position: absolute;left: 50%;transform: translateX(-50%);">
         <li><a href="index.html">Inicio</a></li>
         <li><a href="#nosotros">Nosotros</a></li>
         <li><a href="#productos">Productos</a></li>
