cambios en la interfaz

--- a/aviso.html
+++ b/aviso.html
@@ -33,7 +33,11 @@
 
   <section id="terminos" class="terms-section">
     <div class="terms-container">
-      <h2>Aviso de privacidad</h2>
+      <div class="title-section">
+        <img src="tierra_dulce_negro.png" alt="Nuestra empresa" class="left-img">
+        <h1>Aviso de privacidad</h1>
+        <img src="tierra_dulce_negro.png" alt="Nuestra empresa" class="right-img">
+      </div>
       <div class="terms-content">
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos sapiente saepe minima excepturi fuga dolorem soluta, quo, ullam eaque, repellat non asperiores amet. Alias odit obcaecati dolorem eos animi voluptates?
@@ -83,7 +87,7 @@
           <a href="terminos.html" class="footer-link">Términos y Condiciones</a> |
           <a href="aviso.html" class="footer-link">Aviso de Privacidad</a>
         </div>
-        <p class="copyright">&copy; 2024 Tierra dulce. Todos los derechos reservados.</p>
+        <p class="copyright">&copy; 2024 Tierra Dulce Tradicional. Todos los derechos reservados.</p>
       </div>
     </footer>
 
