--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
  
   <header class="navbar">
-    <div class="logo">
+    <!-- <div class="logo">
       <a href="index.html"><img src="tierra_dulce_logo.png" alt="" ></a>
-    </div>
+    </div> -->
     
     <nav>
       <button class="hamburger" aria-label="Abrir menú">
@@ -47,57 +47,34 @@
       <button class="carousel-button next">&#10095;</button>
     </section>
 
-    <section class="hero">
+    <!-- <section class="hero">
       <h2>¡Los Mejores Dulces a Tu Alcance!</h2>
       <p>Descubre nuestro delicioso catálogo de dulces y anímate a probarlos.</p>
+    </section> -->
+
+    <section id="nosotros" class="about-section">
+      <div class="about-image">
+        <img src="tierra_dulce_logo.png" alt="Nuestra empresa">
+      </div>
+      <div class="about-text">
+        <p>Somos una empresa dedicada a brindar dulces de calidad, que endulzan la vida de nuestros clientes. Nos especializamos en una amplia gama de productos que combinan tradición y creatividad. Nuestra misión es llevar alegría y sabor a cada hogar.</p>
+        <p>Nos caracterizamos por nuestro compromiso con la calidad y la innovación, buscando siempre sorprender y satisfacer los gustos de nuestros clientes.</p>
+      </div>
+      <div class="title-section-v">
+        <h2>Nosotros</h2>
+      </div>
+      <div class="additional-content">
+        <p>Este es el contenido adicional que aparece debajo de los tres primeros elementos.</p>
+      </div>
     </section>
 
-  <section id="nosotros" class="about-section">
-    <div class="about-image">
-      <img src="tierra_dulce_iso.png" alt="Nuestra empresa">
-    </div>
-    <div class="about-text">
-      <h2>Nosotros</h2>
-      <p>Somos una empresa dedicada a brindar dulces de calidad, que endulzan la vida de nuestros clientes. Nos especializamos en una amplia gama de productos que combinan tradición y creatividad. Nuestra misión es llevar alegría y sabor a cada hogar.</p>
-      <p>Nos caracterizamos por nuestro compromiso con la calidad y la innovación, buscando siempre sorprender y satisfacer los gustos de nuestros clientes.</p>
-    </div>
-  </section>
-
-  
-
-  <!-- <section id="productos" class="product-section">
-    <h2>Nuestros Productos</h2>
-    <div class="product-grid">
-      <div class="product-item">
-        <img src="producto2.jpg" alt="Producto 1">
-        <h3>Producto 1</h3>
-        <p>Descripción breve del producto.</p>
-        <button>Comprar ahora</button>
-      </div>
-      <div class="product-item">
-        <img src="producto2.jpg" alt="Producto 2">
-        <h3>Producto 2</h3>
-        <p>Descripción breve del producto.</p>
-        <button>Comprar ahora</button>
-      </div>
-      <div class="product-item">
-        <img src="producto2.jpg" alt="Producto 3">
-        <h3>Producto 3</h3>
-        <p>Descripción breve del producto.</p>
-        <button>Comprar ahora</button>
-      </div>
-      <div class="product-item">
-        <img src="producto2.jpg" alt="Producto 4">
-        <h3>Producto 4</h3>
-        <p>Descripción breve del producto.</p>
-        <button>Comprar ahora</button>
-      </div>
-    </div>
-  </section> -->
 
   <section id="productos" class="product-section">
+      <div class="title-section">
+        <img src="tierra_dulce_negro.png" alt="Nuestra empresa" class="left-img">
         <h1>Productos</h1>
-        <p>Seleccione una categoría para ver los productos disponibles:</p>
+        <img src="tierra_dulce_negro.png" alt="Nuestra empresa" class="right-img">
+      </div>
 
         <div class="categories">
             <button onclick="filterProducts('all')">Todos</button>
@@ -149,7 +126,7 @@
         <p>Elegirnos es optar por el sabor, la innovación y el compromiso con nuestros clientes, ya que creemos en crear dulces que no solo sean productos, sino que también te llenen de alegría y nostalgia.</p>
       </div>
       <div class="choose-us-image">
-        <img src="choose-us.jpg" alt="Ventajas de elegirnos">
+        <img src="tierra_dulce_blanco.png" alt="Ventajas de elegirnos">
       </div>
     </section>
 
@@ -202,7 +179,7 @@
           <a href="terminos.html" class="footer-link">Términos y Condiciones</a> |
           <a href="aviso.html" class="footer-link">Aviso de Privacidad</a>
         </div>
-        <p class="copyright">&copy; 2024 Tierra dulce. Todos los derechos reservados.</p>
+        <p class="copyright">&copy; 2024 Tierra Dulce Tradicional. Todos los derechos reservados.</p>
       </div>
     </footer>
 
