--- a/terminos.html
+++ b/terminos.html
@@ -33,7 +33,13 @@
 
   <section id="terminos" class="terms-section">
     <div class="terms-container">
-      <h2>Términos y Condiciones</h2>
+      <div class="title-section">
+        <img src="tierra_dulce_negro.png" alt="Nuestra empresa" class="left-img">
+        <h1>Términos y Condiciones</h1>
+        <img src="tierra_dulce_negro.png" alt="Nuestra empresa" class="right-img">
+      </div>
+
+
       <div class="terms-content">
         <p>
           Bienvenido a <strong>Tierra Dulce</strong>. Al acceder a nuestro sitio web, aceptas cumplir con los siguientes términos y condiciones. 
@@ -90,7 +96,7 @@
           <a href="terminos.html" class="footer-link">Términos y Condiciones</a> |
           <a href="aviso.html" class="footer-link">Aviso de Privacidad</a>
         </div>
-        <p class="copyright">&copy; 2024 Tierra dulce. Todos los derechos reservados.</p>
+        <p class="copyright">&copy; 2024 Tierra Dulce Tradicional. Todos los derechos reservados.</p>
       </div>
     </footer>
 
