se agregaron detalles en pagina

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h2>Nosotros</h2>
       </div>
       <div class="additional-content">
-        <p>Este es el contenido adicional que aparece debajo de los tres primeros elementos.</p>
+        <img src="triangulos.png" />
       </div>
     </section>
 
@@ -122,6 +122,9 @@
     <section id="por-que-elegirnos" class="choose-us-section">
       <div class="choose-us-text">
         <h2>¿Por qué elegirnos?</h2>
+        <div class="choose-img">
+          <img src="triangulos.png" />
+        </div>
         <p>Nos destacamos por nuestra dedicación en ofrecer dulces de la mejor calidad, cuidadosamente elaborados para que disfrutes de una experiencia única y deliciosa.</p>
         <p>Elegirnos es optar por el sabor, la innovación y el compromiso con nuestros clientes, ya que creemos en crear dulces que no solo sean productos, sino que también te llenen de alegría y nostalgia.</p>
       </div>
