se agrego tapiz debajo del menu y ajustes responsivos

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <li><a href="#contact">Contáctanos</a></li>
       </ul>
     </nav>
+    <div class="papeltapiz-nav">
+        <div class="papeltapiz-nav-img">
+          <img src="tierra_dulce_iso.png"/>
+        </div>
+    </div>
   </header>
 
     <section id="carousel-section" class="carousel-section" >
