--- a/terminos.html
+++ b/terminos.html
@@ -12,9 +12,9 @@
 <body>
  
   <header class="navbar">
-    <div class="logo">
+    <!-- <div class="logo">
       <a href="index.html"><img src="tierra_dulce_logo.png" alt="" ></a>
-    </div>
+    </div> -->
     
     <nav>
       <button class="hamburger" aria-label="Abrir menú">
@@ -29,6 +29,11 @@
         <li><a href="#contact">Contáctanos</a></li>
       </ul>
     </nav>
+    <div class="papeltapiz-nav">
+        <div class="papeltapiz-nav-img">
+          <img src="tierra_dulce_iso.png"/>
+        </div>
+    </div>
   </header>
 
   <section id="terminos" class="terms-section">
